--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,11 +38,16 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   equatable: ^2.0.5
+  firebase_core: ^2.8.0
+  firebase_auth: ^4.3.0
+  flow_builder: ^0.0.9
+  flutterfire_ui: ^0.4.3+20
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.1
+  flutter_custom_clippers: ^2.1.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
