--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,12 +42,14 @@ dependencies:
   firebase_auth: ^4.3.0
   flow_builder: ^0.0.9
   flutterfire_ui: ^0.4.3+20
+  image: ^4.0.15
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.1
   flutter_custom_clippers: ^2.1.0
+  
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
