--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,19 +30,22 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_bloc: ^8.1.2
-  bloc: ^8.1.1
+  flutter_bloc: ^8.1.3
+  bloc: ^8.1.2
   meta: ^1.8.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   equatable: ^2.0.5
-  firebase_core: ^2.8.0
-  firebase_auth: ^4.3.0
+  firebase_core: ^2.14.0
+  firebase_auth: ^4.6.3
   flow_builder: ^0.0.9
   flutterfire_ui: ^0.4.3+20
   image: ^4.0.15
+  http: ^1.1.0
+  uuid: ^3.0.7
+
 
 dev_dependencies:
   flutter_test:
